[gd_scene load_steps=4 format=2]

[ext_resource path="res://materiali/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://materiali/avatars/avatar1.png" type="Texture" id=2]
[ext_resource path="res://menu/configure_player/PlayerLine.gd" type="Script" id=3]

[node name="PlayerLine" type="HBoxContainer"]
margin_right = 500.0
margin_bottom = 48.0
rect_min_size = Vector2( 500, 48 )
size_flags_horizontal = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 43.0, 24.0 ],
"_edit_vertical_guides_": [ 1024.0, 926.0, 449.0, 400.0, 801.0 ]
}

[node name="PlayerNameBtn" type="Button" parent="." groups=["line_btns"]]
margin_top = 13.0
margin_right = 48.0
margin_bottom = 35.0
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "LERI"

[node name="PlayerAvatarBtn" type="Button" parent="." groups=["line_btns"]]
margin_left = 290.0
margin_top = 4.0
margin_right = 330.0
margin_bottom = 44.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource( 1 )
icon = ExtResource( 2 )
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 334.0
margin_top = 24.0
margin_right = 342.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 9
size_flags_vertical = 8
custom_constants/separation = 8

[node name="PlayerColorIndicator" type="ColorRect" parent="."]
margin_left = 346.0
margin_top = 13.0
margin_right = 368.0
margin_bottom = 35.0
rect_min_size = Vector2( 22, 22 )
size_flags_vertical = 4
__meta__ = {
"_edit_group_": true
}

[node name="PlayerColorBtn" type="Button" parent="PlayerColorIndicator" groups=["line_btns"]]
show_behind_parent = true
rect_min_size = Vector2( 22, 22 )
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource( 1 )

[node name="VSeparator2" type="VSeparator" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 372.0
margin_top = 24.0
margin_right = 460.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 9
size_flags_vertical = 8
custom_constants/separation = 88

[node name="DeletePlayerBtn" type="Button" parent="." groups=["line_btns"]]
margin_left = 464.0
margin_top = 11.0
margin_right = 500.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0 )
text = "[ - ]"
flat = true

[connection signal="pressed" from="PlayerNameBtn" to="." method="_on_PlayerNameBtn_pressed"]
[connection signal="pressed" from="PlayerAvatarBtn" to="." method="_on_PlayerAvatarBtn_pressed"]
[connection signal="pressed" from="PlayerColorIndicator/PlayerColorBtn" to="." method="_on_PlayerColorBtn_pressed"]
[connection signal="pressed" from="DeletePlayerBtn" to="." method="_on_DeletePlayerBtn_pressed"]
